fixed list not showing for all

--- a/public/style.css
+++ b/public/style.css
@@ -88,74 +88,74 @@ nav {
   }
   
   a:nth-child(1) {
-	width: 150px;
+	width: 10%;
   }
   
   nav .start-home,ul a:nth-child(1):hover~.animation {
-	width: 150px;
+	width: 10%;
 	left: 0px;
   }
   
   a:nth-child(2) {
-	width: 150px;
+	width: 10%;
   }
   
   nav .start-ingredients,ul a:nth-child(2):hover~.animation {
-	width: 150px;
-	left: 150px;
+	width: 10%;
+	left: 10%;
   }
   
   a:nth-child(3) {
-	width: 150px;
+	width:10%;
   }
   
   nav .start-nutrition,ul a:nth-child(3):hover~.animation {
-	left: 300px;
-	width: 150px;
+	left: 20%;
+	width: 10%;
   }
   
   a:nth-child(4) {
-	width: 150px;
+	width: 10%;
   }
   
   nav .start-recipes, a:nth-child(4):hover~.animation {
-	width: 150px;
-	left: 450px;
+	width: 10%;
+	left: 30%;
   }
   
   a:nth-child(5) {
-	width: 150px;
+	width: 10%;
   }
   
   nav .start-favourites, a:nth-child(5):hover~.animation {
-	width: 150px;
-	left: 600px;
+	width: 10%;
+	left: 40%;
   }
   
   a:nth-child(6) {
-	width: 150px;
+	width: 10%;
   }
   
   nav .start-profile, a:nth-child(6):hover~.animation {
-	left: 750px;
-	width: 150px;
+	left: 50%;
+	width: 10%;
   }
   
   a:nth-child(7) {
-	width: 150px;
+	width: 10%;
   }
   
   nav .start-about, a:nth-child(7):hover~.animation {
-	left: 900px;
-	width: 150px;
+	left: 60%;
+	width: 10%;
   }
   a:nth-child(8) {
-	width: 150px;
+	width: 10%;
   }
   
   nav .start-about, a:nth-child(8):hover~.animation {
-	left: 1050px;
-	width: 150px;
+	left: 70%;
+	width: 10%;
   }
   
   .navbar-toggler {
